修改主题配置

--- a/_config.yml
+++ b/_config.yml
@@ -5,10 +5,10 @@
 # Site
 title: 西左Log
 subtitle: ''
-description: ''
+description: 自是者不彰。
 keywords:
-author: xizuo
-language: zh-Hans
+author: 西左
+language: zh-CN
 timezone: 'Asia/Shanghai'
 
 # URL
